--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -53,6 +53,17 @@
         </div>
       </div>
       <div class="form-group">
+        <label for="name">Your Name</label>
+        <input
+          type="name"
+          class="form-control"
+          name="name"
+          [(ngModel)]="form.name"
+          required
+          #name="ngModel"
+        />
+      </div>
+      <div class="form-group">
         <label for="password">Password</label>
         <input
           type="password"
