--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="card card-container">
     <img
       id="profile-img"
-      src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
+      src="https://cdn-icons-png.flaticon.com/512/1177/1177568.png"
       class="profile-img-card"
     />
     <form
