--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,2 @@
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import 'https://fonts.googleapis.com/icon?family=Material+Icons';
