--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -35,7 +35,7 @@
       </ul>
     </nav>
   
-    <div class="container">
+    <div class="content">
       <router-outlet></router-outlet>
     </div>
   </div>
