--- a/frontend/src/app/board-admin/config/config.component.html
+++ b/frontend/src/app/board-admin/config/config.component.html
@@ -36,8 +36,8 @@
       <mat-label>Users to choose from</mat-label>
     </mat-form-field>
   </div>
-  <div *ngIf="!!selectedDevice">
-    <div class="">Input Device Name:
+  <!-- <div *ngIf="!!selectedDevice"> -->
+    <!-- <div class="">Input Device Name:
       <div class="example-button-row">
         <mat-form-field>
           <input matInput placeholder="Ex. Aurorum Device 1" [(ngModel)]="selectedDevice.name">
@@ -47,13 +47,13 @@
         <br>
         <button class="admin-button" mat-raised-button (click)="deleteDevice()" color="warn">Delete Device</button>
       </div>
-    </div>
-    <div class="device-list-view">
+    </div> -->
+    <!-- <div class="device-list-view">
       <mat-selection-list #device [multiple]="false" (selectionChange)="currentDevice($event)">
         <mat-list-option *ngFor="let device of allDevices" [value]="device">
           {{device.name}}
         </mat-list-option>
       </mat-selection-list>
-    </div>
-  </div>
+    </div> -->
+  <!-- </div> -->
 </div>
