Resolved Multiple Devices being connected to the same config and both being updated in real time. Additionally resolved so that leaving and joining new rooms/configs doesnt mess with future config changes from previous configs/rooms for a device thats no longer listening to that config

--- a/frontend/src/app/board-admin/config/config.component.html
+++ b/frontend/src/app/board-admin/config/config.component.html
@@ -1,10 +1,16 @@
 <div class="config-layout">
   <div class="config-list-view">
-    <mat-selection-list #configs (selectionChange)="onConfigChange($event)" [multiple]="false">
-      <mat-list-option *ngFor="let config of availableConfigs" [value]="config">
+    <mat-list #configs >
+      <mat-list-item (click)="newConfig()"  class="input">
+        <span>+ add Config</span>
+      </mat-list-item>
+      <mat-list-item (click)="onConfigChange(config)" *ngFor="let config of newConfigs" [ngClass]="{selected: config._id === selectedConfig._id}" class="input">
         {{config.name}}
-      </mat-list-option>
-    </mat-selection-list>
+      </mat-list-item>
+      <mat-list-item (click)="onConfigChange(config)" *ngFor="let config of availableConfigs" [ngClass]="{selected: config._id === selectedConfig._id}"  class="input">
+        {{config.name}}
+      </mat-list-item>
+    </mat-list>
   </div>
   <div *ngIf="!!selectedConfig">
     <div class="">Input Config Name:
