--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,2 +1,9 @@
 @import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 @import 'https://fonts.googleapis.com/icon?family=Material+Icons';
+
+.selected {
+    background: rgba(0,0,0,.12);
+}
+.input:hover{
+    background-color: rgba(0,0,0,.12);
+}
