Resolved Kiosk View, Added additional Functionality to Admin View, Added styles to Profile-Card, added Profile Pictures to People, expanded services and backend to acommodate new feature

--- a/frontend/src/app/board-admin/board-admin.component.html
+++ b/frontend/src/app/board-admin/board-admin.component.html
@@ -12,6 +12,10 @@
       <mat-icon (click)="navigateTo('logging')">query_stats</mat-icon>
     <p>Statistics</p>
     </button>
+    <button mat-icon-button >
+      <mat-icon (click)="navigateTo('style')">style</mat-icon>
+    <p>Style Edit</p>
+    </button>
     
   <div>  
 </div>
