--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,5 +1,5 @@
-<div class="col-md-12">
-  <div class="card card-container">
+<div class="col-md-12 login-container">
+  <div class="card card-container login-card">
     <img
       id="profile-img"
       src="https://cdn-icons-png.flaticon.com/512/1177/1177568.png"
