--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div id="app">
-    <nav class="navbar navbar-expand navbar-dark bg-dark">
+    <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="showToolbar">
       <a routerLink="" class="navbar-brand">Apptagen</a>
       <ul class="navbar-nav mr-auto" routerLinkActive="active">
         <li class="nav-item">
