--- a/frontend/src/app/board-admin/board-admin.component.css
+++ b/frontend/src/app/board-admin/board-admin.component.css
@@ -14,6 +14,7 @@ mat-icon{
     align-items: center;
     transform: scale(1.5);
     margin: 5px;
+    margin-top: 10px;
 }
 button{
     width: 50px;
