--- a/frontend/src/app/profile/profile.component.html
+++ b/frontend/src/app/profile/profile.component.html
@@ -1,9 +1,7 @@
 <div class="container" *ngIf="currentUser; else loggedOut">
-  <header class="jumbotron">
-    <h3>
-      <strong>{{ currentUser.username }}</strong> Profile
-    </h3>
-  </header>
+    <app-person-card [person]="profileCard" *ngIf="!!profileCard">
+
+    </app-person-card>
   <p>
     <strong>Token:</strong>
     {{ currentUser.accessToken.substring(0, 20) }} ...
