--- a/frontend/src/app/shared/update-status/status-dialog/status-dialog.component.html
+++ b/frontend/src/app/shared/update-status/status-dialog/status-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Hi {{status.availability.status}}</h1>
+<h1 mat-dialog-title>Hi {{currentUser.name}}</h1>
 <div mat-dialog-content>
     <mat-form-field>
         <mat-label>Message</mat-label>
