--- a/frontend/src/app/shared/update-status/update-status.component.html
+++ b/frontend/src/app/shared/update-status/update-status.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button mat-fab mat-button #menuTrigger (click)="openDialog()">Menu</button>
+    <button class="menu-button" mat-fab mat-button #menuTrigger (click)="openDialog()">Menu</button>
     <input list="rainbow" #color type="color" [value]="status.availability.color" hidden="true"/>
 </div>
 
