--- a/frontend/src/app/shared/person-card/person-card.component.css
+++ b/frontend/src/app/shared/person-card/person-card.component.css
@@ -9,6 +9,11 @@ mat-card-title > app-status-icon{
     margin-right: 10px;  
 }
 
+.edit-picture:hover{
+    opacity: 80%;
+    transition: opacity 0.5s;
+}
+
 .example-header-image {
     /* background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg'); */
     background-size: cover;
@@ -16,7 +21,6 @@ mat-card-title > app-status-icon{
     width: 100px;
     height: 100px;
 }
-
 mat-card {
     background-position: center;
     /* background-image: url('http://localhost:8080/images/card-background/background1.jpg'); */
