--- a/frontend/src/app/shared/person-card/person-card.component.html
+++ b/frontend/src/app/shared/person-card/person-card.component.html
@@ -1,7 +1,8 @@
 <mat-card *ngIf="!!person && !!person.status.availability"
 [ngStyle]="{'background-image': background}">
+
   <mat-card-header>
-    <div *ngIf="loadedStyles; else noPicture" mat-card-avatar class="example-header-image" [ngStyle]="{'color': person.status.availability.color, 'background-image': picture}"></div>
+    <div *ngIf="loadedStyles; else noPicture" mat-card-avatar (click)="onPictureClick()" class="example-header-image" [ngClass]="{'edit-picture': editMode}" [ngStyle]="{'color': person.status.availability.color, 'background-image': picture}"></div>
     <mat-card-title (click)="onTitleClick()">{{person.name}}</mat-card-title>
     
     <ng-template #noPicture>
@@ -19,10 +20,6 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec eros risus. Etiam vestibulum vel est nec tincidunt. Ut at odio at magna vestibulum maximus. Fusce tellus orci, interdum ac dui tristique, volutpat maximus purus. Sed dapibus rutrum tristique. Mauris mollis non mi ac vestibulum. Vestibulum sagittis magna convallis facilisis pharetra. Ut consectetur eget enim in sagittis.
             </p>
         </mat-card-content>
-        <mat-card-actions *ngIf="editMode">
-            <button>I'm a button</button>
-            <input list="rainbow" #color type="color" (change)="person.status.availability.color=color.value" [value]="person.color"/>
-        </mat-card-actions>
     </mat-card>
     
 <!--     
