Apptagen V 0.1 Build finished.

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div id="app">
+  <!-- This section determines what links will be shown on the navigational bar on the Front end -->
     <nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="showToolbar">
       <a routerLink="" class="navbar-brand">Apptagen</a>
       <ul class="navbar-nav mr-auto" routerLinkActive="active">
@@ -33,6 +34,6 @@
     </nav>
   
     <div class="content">
-      <router-outlet></router-outlet>
+      <router-outlet class="content"></router-outlet>
     </div>
   </div>
