--- a/frontend/src/app/board-admin/board-admin.component.html
+++ b/frontend/src/app/board-admin/board-admin.component.html
@@ -1,4 +1,5 @@
 <div class="content">
+  <!-- Adds buttons for each admin functionality that of interest -->
   <div class="buttons">  
     <button mat-icon-button (click)="navigateTo('config')">
       <mat-icon>assignment</mat-icon>
@@ -8,6 +9,7 @@
       <mat-icon (click)="navigateTo('device')">devices</mat-icon>
     <p>Devices</p>
     </button>
+    <!-- Logging has not yet been implemented, this is a dead link -->
     <button mat-icon-button >
       <mat-icon (click)="navigateTo('logging')">query_stats</mat-icon>
     <p>Statistics</p>
