--- a/frontend/src/app/board-moderator/board-moderator.component.html
+++ b/frontend/src/app/board-moderator/board-moderator.component.html
@@ -1,1 +1,3 @@
 <p>board-moderator works!</p>
+
+<!-- // Moderator Functionalities have not been implemented, this is a stub for future implementation -->
