--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -1,3 +1,14 @@
-.content {
-    width: 100%;
-}
+html, body {
+    /*font-size: 40px;*/
+    margin:0; /* remove default margin */
+    padding:0; /* remove default padding */
+    width:100vw; /* take full browser width */
+    height:100vh; /* take full browser height*/
+    }
+    
+    /*(set the full width window [width = device-width])*/
+    
+    .content{
+    max-width: 100vw;
+    max-height: 100vh;
+    }
