--- a/frontend/src/app/board-admin/config/config.component.html
+++ b/frontend/src/app/board-admin/config/config.component.html
@@ -1,7 +1,8 @@
 <div class="config-layout">
   <div class="config-list-view">
     <mat-list #configs >
-      <mat-list-item (click)="newConfig()"  class="input">
+      <mat-list-item (click)="newConfig()"  class="input"> 
+        <!-- creating a new config without pushing it to the backend until its sent with Update -->
         <span>+ add Config</span>
       </mat-list-item>
       <mat-list-item (click)="onConfigChange(config)" *ngFor="let config of newConfigs" [ngClass]="{selected: config._id === selectedConfig._id}" class="input">
