--- a/frontend/src/app/kiosk/kiosk.component.css
+++ b/frontend/src/app/kiosk/kiosk.component.css
@@ -1,3 +1,24 @@
+
+.container {
+    padding: 0px;
+    display: inline;
+    vertical-align: middle;
+    margin: 0 0 0 0;
+  }
+  
+  .column-1,
+  .column-2 {
+    float: center;
+    width: 100%;
+    height: 100%;
+  }
 p-carousel {
     float: center;
+    
+    /* height: 100%; */
+}
+app-person-card {
+	height: 100vh;
+	display: flex;
+	width: 100vw;
 }
