--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,3 +7,24 @@
 .input:hover{
     background-color: rgba(0,0,0,.12);
 }
+body {
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+}
+app-root{
+    height: 100vh;
+    width: 100vw;
+    display: block;
+}
+/* Two functions that are called for Admin-view Styles Edit to ensure that the
+app-person-card follows these rules and not grow disproportionately large during editing and customization */
+.cardMax{
+    max-height: 300px !important;
+    display: grid !important;
+}
+.cardimageMax{
+      max-height: 250px !important;
+      max-width: 250px !important;
+      align-items: none;
+}
